Rubik Font added, Color added to asset and color hex changed to 2567FF and removed constant file

--- a/Chatkit/Chatkit/Info.plist
+++ b/Chatkit/Chatkit/Info.plist
@@ -56,5 +56,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Rubik-Bold.ttf</string>
+		<string>Rubik-Medium.ttf</string>
+	</array>
 </dict>
 </plist>
